--- a/aur-repo/mwtool-git/PKGBUILD
+++ b/aur-repo/mwtool-git/PKGBUILD
@@ -32,7 +32,7 @@ prepare() {
 }
 
 package() {
-    dos2unix "${srcdir}"/${pkgname}/mw.sh
-    install -Dm755 "${srcdir}"/${pkgname}/mw.sh ${pkgdir}/usr/bin/mw
+    dos2unix "${srcdir}"/${pkgname}/bash/mw.sh
+    install -Dm755 "${srcdir}"/${pkgname}/bash/mw.sh ${pkgdir}/usr/bin/mw
     install -dm777 ${pkgdir}/media/me/
 }
