--- a/aur-repo/logicanalyzer-git/PKGBUILD
+++ b/aur-repo/logicanalyzer-git/PKGBUILD
@@ -23,7 +23,7 @@ noextract=()
 
 pkgver() {
     cd "${srcdir}/${pkgbase}"
-    git describe --long --tags | sed 's/^V//g;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --tags | sed 's/^[vV]//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
