--- a/aur-repo/ok-rtc-git/PKGBUILD
+++ b/aur-repo/ok-rtc-git/PKGBUILD
@@ -16,7 +16,8 @@ replaces=()
 license=('BSD-3-Clause')
 depends=(
     abseil-cpp
-    ffmpeg
+    #     ffmpeg
+    ffmpeg4.4
     gcc-libs
     glib2
     glibc
