--- a/aur-repo/pts-tiny-7z-sfx/lilac.yaml
+++ b/aur-repo/pts-tiny-7z-sfx/lilac.yaml
@@ -1,12 +1,19 @@
+# maintainers:
+#   - github: taotieren
+# pre_build_script: |
+#   update_pkgver_and_pkgrel(_G.newver)
+# post_build_script: |
+#   git_pkgbuild_commit()
+#   update_aur_repo()
+# update_on:
+#   - source: github
+#     github: pts/pts-tiny-7z-sfx
+#     use_max_tag: true
+#     prefix: v
 maintainers:
   - github: taotieren
-pre_build_script: |
-  update_pkgver_and_pkgrel(_G.newver)
-post_build_script: |
-  git_pkgbuild_commit()
-  update_aur_repo()
+pre_build_script: aur_pre_build(maintainers=['taotieren'])
+post_build: aur_post_build
 update_on:
-  - source: github
-    github: pts/pts-tiny-7z-sfx
-    use_max_tag: true
-    prefix: v
+  - source: aur
+    aur: pts-tiny-7z-sfx
