--- a/aur-repo/python-cmsis-pack-manager/PKGBUILD
+++ b/aur-repo/python-cmsis-pack-manager/PKGBUILD
@@ -40,13 +40,15 @@ prepare() {
   # https://github.com/pyocd/cmsis-pack-manager/pull/219
   #   patch -Np1 -d $_name -i ../$pkgname-0.5.3-update_maturin.patch
   git -C "${srcdir}/${_name}" clean -dfx
-  cd $_name
-  git tag -l 'rust*' | xargs git tag -d
+  #   cd $_name
+  #   git tag -l 'rust*' | xargs git tag -d
   cargo fetch --locked --target "$CARCH-unknown-linux-gnu"
 }
 
 pkgver() {
   cd "${srcdir}/${_name}"
+
+  git tag -l 'rust*' | xargs git tag -d
   (
     set -o pipefail
     git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
