--- a/aur-repo/python-cmsis-svd-git/PKGBUILD
+++ b/aur-repo/python-cmsis-svd-git/PKGBUILD
@@ -29,9 +29,8 @@ pkgver() {
     git describe --long --tags | sed 's/^python-//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
-    git -C "${srcdir}/${_name}" clean -dfx
+prepare() {
+    git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
 build() {
@@ -48,4 +47,3 @@ package() {
     cd "${srcdir}/$pkgname/python"
     python -m installer --destdir="${pkgdir}" dist/*.whl
 }
-
