--- a/aur-repo/python-cmsis-svd-git/PKGBUILD
+++ b/aur-repo/python-cmsis-svd-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-cmsis-svd-git
-pkgver=0.4.r221.g1bea425
-pkgrel=2
+pkgver=0.5.r14.g4a23b3b
+pkgrel=1
 pkgdesc='Aggegration of ARM Cortex-M (and other) CMSIS SVDs and related tools'
 url='https://github.com/cmsis-svd/cmsis-svd'
 license=('Apache-2.0')
