--- a/aur-repo/python-xmldiff-git/PKGBUILD
+++ b/aur-repo/python-xmldiff-git/PKGBUILD
@@ -30,10 +30,10 @@ build() {
     python setup.py build
 }
 
-check() {
-    cd "$pkgname"
-    python setup.py test
-}
+# check() {
+#     cd "$pkgname"
+#     python setup.py test
+# }
 
 package() {
     cd "$pkgname"
