--- a/aur-repo/rustdesk-appimage/lilac.yaml
+++ b/aur-repo/rustdesk-appimage/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['kuhtoxo', 'kolewu'])
+pre_build_script: aur_pre_build(maintainers=['kuhtoxo', 'kolewu', 'Zoddo'])
 post_build: aur_post_build
 update_on:
   - source: aur
