--- a/aur-repo/rustdesk-bin/PKGBUILD
+++ b/aur-repo/rustdesk-bin/PKGBUILD
@@ -1,16 +1,17 @@
 # Maintainer: KUHTOXO https://aur.archlinux.org/account/kuhtoxo
-# Contributor: Zoddo <archlinux+aur@zoddo.fr>
+# Maintainer: Zoddo <archlinux+aur@zoddo.fr>
+# Contributor: void09 <sgmihai at gmail dot com>
 # Contributor: taotieren <admin@taotieren.com>
 # Contributor: Leon Möller <jkhsjdhjs at totally dot rip>
 
 pkgbase=rustdesk-bin
 pkgname=(rustdesk-bin)
-pkgver=1.3.2
-pkgrel=3
+pkgver=1.3.4
+pkgrel=1
 pkgdesc="Yet another remote desktop software, written in Rust. Works out of the box, no configuration required."
 url="https://github.com/rustdesk/rustdesk"
-license=('AGPL-3.0')
-arch=('x86_64')
+license=('AGPL-3.0-only')
+arch=('x86_64' 'aarch64')
 provides=("${pkgname%-bin}")
 conflicts=("${pkgname%-bin}")
 depends=(
@@ -30,8 +31,10 @@ optdepends=(
     'libayatana-appindicator: tray icon'
 )
 options=('!strip' '!lto' '!debug')
-source=("${pkgbase%-bin}-${pkgver}-$CARCH.pkg.tar.zst::$url/releases/download/${pkgver/_/-}/rustdesk-${pkgver/_/-}-0-$CARCH.pkg.tar.zst")
-sha256sums=('c782d9837d25fbb7a073a658d61325213a8585e982508b4679b0c317c7a8412d')
+source_x86_64=("${pkgbase%-bin}-${pkgver}-x86_64.pkg.tar.zst::$url/releases/download/${pkgver/_/-}/rustdesk-${pkgver/_/-}-0-x86_64.pkg.tar.zst")
+source_aarch64=("${pkgbase%-bin}-${pkgver}-aarch64.rpm::$url/releases/download/${pkgver/_/-}/rustdesk-${pkgver/_/-}-0.aarch64.rpm")
+sha256sums_x86_64=('5ab10917242b9fe2f1c8d304c32d10231788bb72cce98621d0f80464adf530cc')
+sha256sums_aarch64=('2fd75f53011a85dbbdddd6e7bff3ff73573a86f21ae1c4220ff8a5bc70ddabc1')
 
 install=$pkgname.install
 
