--- a/aur-repo/tinybpt-git/lilac.yaml
+++ b/aur-repo/tinybpt-git/lilac.yaml
@@ -4,6 +4,8 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - cpp-httplib
 update_on:
   - source: git
     git: https://gitee.com/tinylab/buildroot-toolkit.git
