--- a/aur-repo/mfgtools-git/PKGBUILD
+++ b/aur-repo/mfgtools-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=mfgtools-git
 pkgname=(mfgtools{,-doc}-git)
-pkgver=1.5.191.r0.g6c2141e
+pkgver=1.5.191.r4.g64a5a8f
 pkgrel=1
 epoch=
 pkgdesc="uuu (Universal Update Utility), mfgtools 3.0. Freescale/NXP I.MX Chip image deploy tools."
