--- a/aur-repo/finalshell/lilac.yaml
+++ b/aur-repo/finalshell/lilac.yaml
@@ -1,6 +1,13 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['lucas007'])
+pre_build_script: |
+  aur_pre_build(maintainers=['lucas007'])
+  run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=finalshell'])
+
+  for line in edit_file('PKGBUILD'):
+    if line.startswith('pkgver()'):
+      line = f'pkgver="_pkgver"'
+    print(line)
 post_build: aur_post_build
 update_on:
   - source: aur
