--- a/aur-repo/finalshell/lilac.yaml
+++ b/aur-repo/finalshell/lilac.yaml
@@ -6,8 +6,10 @@ pre_build_script: |
 
   for line in edit_file('PKGBUILD'):
     if line.startswith('pkgver()'):
-      line = f'pkgver="_pkgver"'
+      line = f'pkgver()"_pkgver"'
     print(line)
+
+  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 update_on:
   - source: aur
