--- a/aur-repo/finalshell/lilac.yaml
+++ b/aur-repo/finalshell/lilac.yaml
@@ -9,8 +9,8 @@ pre_build_script: |
       line = f'pkgver()"_pkgver"'
     print(line)
 
-  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 update_on:
   - source: aur
     aur: finalshell
+# run_cmd(['updpkgsums'])
