--- a/aur-repo/finalshell/lilac.yaml
+++ b/aur-repo/finalshell/lilac.yaml
@@ -5,8 +5,8 @@ pre_build_script: |
   run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=finalshell'])
 
   for line in edit_file('PKGBUILD'):
-    if line.startswith('pkgver()'):
-      line = f'pkgver()"_pkgver()"'
+    if line.startswith('pkgver() {'):
+      line = "_pkgver() {"
     print(line)
 
   run_cmd(['updpkgsums'])
