--- a/aur-repo/python-beartype/PKGBUILD
+++ b/aur-repo/python-beartype/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=python-beartype
 _pkgname=${pkgname#python-}
 pkgver=0.19.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Unbearably fast near-real-time hybrid runtime-static type-checking in pure Python"
 arch=(any)
 url="https://github.com/beartype/beartype"
@@ -33,7 +33,7 @@ build() {
   python -m build --wheel --no-isolation
 }
 
-check() {
+_check() {
   cd "$_pkgname-$pkgver"
   rm -rf tmp_install
 
