--- a/aur-repo/python-casefy/PKGBUILD
+++ b/aur-repo/python-casefy/PKGBUILD
@@ -3,12 +3,12 @@
 pkgname=python-casefy
 _pkgname=${pkgname#python-}
 pkgver=1.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Utilities to convert the case of strings'
 arch=('any')
 url='https://pypi.org/project/casefy'
 license=('MIT')
-makedepends=('python-build' 'python-installer')
+makedepends=("python-build" "python-hatchling" "python-installer")
 source=("$pkgname-$pkgver.tar.gz::https://files.pythonhosted.org/packages/bf/50/f5991618899c42d0c6339bd83fed5f694f56b204dfb3f2a052f0d586d4c5/casefy-1.0.0.tar.gz")
 sha256sums=('bc99428475c2089c5f6a21297b4cfe4e83dff132cf3bb06655ddcb90632af1ed')
 
@@ -26,3 +26,4 @@ package() {
   install -D -m644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
 
+depends=("python")
