--- a/aur-repo/python-jaxlib/lilac.yaml
+++ b/aur-repo/python-jaxlib/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='daskol')
+pre_build_script: |
+  aur_pre_build(maintainers='daskol')
+  add_makedepends(['git'])
 post_build: aur_post_build
 # repo_depends:
 #   -
