--- a/aur-repo/xfel-git/PKGBUILD
+++ b/aur-repo/xfel-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xfel-git
-pkgver=1.3.2.r35.ga02562b
-pkgrel=4
+pkgver=1.3.2.r36.g7de784f
+pkgrel=1
 pkgdesc="Tiny FEL tools for allwinner SOC, support RISC-V D1 chip."
 arch=($CARCH)
 url="https://github.com/xboot/xfel"
