--- a/aur-repo/mounriverstudio-bin/PKGBUILD
+++ b/aur-repo/mounriverstudio-bin/PKGBUILD
@@ -21,6 +21,7 @@ depends=(
     glib2
     glibc
     gtk3
+    hidapi
     libcups
     libdrm
     libjaylink
@@ -35,10 +36,10 @@ depends=(
     libxkbcommon
     libxkbfile
     libxrandr
-    hidapi
     libudev.so
     nspr
     nss
+    mesa
     pango
     python
     python-pygments
