--- a/aur-repo/autofilm-git/PKGBUILD
+++ b/aur-repo/autofilm-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=autofilm-git
-pkgver=1.2.5.r51.g30ab6df
+pkgver=1.2.6.r0.g10ba335
 pkgrel=1
 pkgdesc="A small project to provide Strm direct-link playback for Emby and Jellyfin servers, recommended for use with MediaWarp."
 arch=(x86_64
