--- a/aur-repo/etherlab-ethercat/lilac.yaml
+++ b/aur-repo/etherlab-ethercat/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['entidi' 'micwoj92])
+pre_build_script: |
+  aur_pre_build(maintainers=['entidi','micwoj92])
+  add_makedepends(['dkms', 'automake'])
 post_build: aur_post_build
 # repo_depends:
 #   -
