--- a/aur-repo/linuxcnc-git/PKGBUILD
+++ b/aur-repo/linuxcnc-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer:  Jason Kercher <jkercher 43 at gmail dot com>
 
 pkgname=linuxcnc-git
-pkgver=2.9.3.r2573.geabc4e4720
-pkgrel=2
+pkgver=2.9.3.r2575.g2d74e9271c
+pkgrel=1
 pkgdesc="Controls CNC machines. It can drive milling machines, lathes, 3d printers, laser cutters, plasma cutters, robot arms, hexapods, and more (formerly EMC2)"
 arch=($CARCH)
 license=('GPL-2.0-only')
