--- a/aur-repo/python-pyftdi/lilac.yaml
+++ b/aur-repo/python-pyftdi/lilac.yaml
@@ -1,15 +1,3 @@
-# maintainers:
-#   - github: taotieren
-# pre_build_script: |
-#   update_pkgver_and_pkgrel(_G.newver)
-# post_build_script: |
-#   git_pkgbuild_commit()
-#   update_aur_repo()
-# update_on:
-#   - source: github
-#     github: eblot/pyftdi
-#     use_max_tag: true
-#   - alias: python
 maintainers:
   - github: taotieren
 pre_build_script: |
@@ -18,6 +6,18 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 update_on:
-  - source: pypi
-    pypi: pyftdi
+  - source: github
+    github: eblot/pyftdi
+    use_max_tag: true
   - alias: python
+# maintainers:
+#   - github: taotieren
+# pre_build_script: |
+#   update_pkgver_and_pkgrel(_G.newver)
+# post_build_script: |
+#   git_pkgbuild_commit()
+#   update_aur_repo()
+# update_on:
+#   - source: pypi
+#     pypi: pyftdi
+#   - alias: python
