--- a/aur-repo/maple-file/PKGBUILD
+++ b/aur-repo/maple-file/PKGBUILD
@@ -23,6 +23,7 @@ makedepends=(
     go
     # AUR
     flutter
+    flutter-target-linux
 )
 optdepends=(
 )
@@ -50,6 +51,7 @@ build() {
     #     go build -ldflags="-w -s" -buildmode=c-shared -o libserver.so ../app/linux/libserver.so cmd/desktop
     go build -ldflags="-w -s -X github.com/honmaple/maple-file/server/internal/app.VERSION=${pkgver}" -buildmode=c-shared -o ../app/linux/libserver.so github.com/honmaple/maple-file/server/cmd/desktop
     cd ../app
+    flutter config --analytics
     flutter pub get
     dart run build_runner build
     flutter build linux
