--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.77.r11.gcd21811
+pkgver=28101.77.r12.g0f50183
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
