--- a/aur-repo/python-bidi/lilac.yaml
+++ b/aur-repo/python-bidi/lilac.yaml
@@ -3,6 +3,9 @@ maintainers:
 pre_build_script: aur_pre_build(maintainers=['pmattern', 'tinywrkb'])
 post_build: aur_post_build
 update_on:
+  - source: github
+    github: MeirKriheli/python-bidi
+    use_max_tag: true
   - source: aur
     aur: python-bidi
   - alias: python
