--- a/aur-repo/libpldm-git/lilac.yaml
+++ b/aur-repo/libpldm-git/lilac.yaml
@@ -4,9 +4,8 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-repo_depends:
-  - abi-dumper
-  - abi-compliance-checker
+# repo_depends:
+#   -
 update_on:
   - source: github
     github: openbmc/libpldm
