--- a/aur-repo/manhuagui-downloader/PKGBUILD
+++ b/aur-repo/manhuagui-downloader/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=manhuagui-downloader
-pkgver=0.9
-pkgrel=1
+pkgver=0.1.0
+pkgrel=0
 pkgdesc="漫画柜 manhuagui 看漫画 下载器，带图形界面，支持下载隐藏内容、导出PDF"
 arch=($CARCH)
 url="https://github.com/lanyeeee/manhuagui-downloader"
@@ -26,8 +26,8 @@ makedepends=(
 backup=()
 options=(!debug !strip !lto)
 #install=${pkgname}.install
-source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz")
-sha256sums=('864688bdae980ad2ad21e2797a2b08ffbc4ef3d910aa53e32383d34087d3b32d')
+source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
+sha256sums=('0a238180519ada73f07d3826d85ae81325513cb080891fc03143157c94232168')
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}/"
