--- a/aur-repo/poedit-git/PKGBUILD
+++ b/aur-repo/poedit-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=poedit-git
-pkgver=3.5.2.r8.gf1536350f
+pkgver=3.5.2.r9.gf08944cf4
 pkgrel=1
 epoch=
 pkgdesc="Translations editor for Mac, Windows and Unix"
