--- a/aur-repo/python-pyjtagtools/lilac.yaml
+++ b/aur-repo/python-pyjtagtools/lilac.yaml
@@ -9,6 +9,7 @@ update_on:
   - source: github
     github: eblot/pyjtagtools
     use_max_tag: true
+    prefix: v
   - alias: python
 # maintainers:
 #   - github: taotieren
