--- a/aur-repo/dsview-git/PKGBUILD
+++ b/aur-repo/dsview-git/PKGBUILD
@@ -1,3 +1,4 @@
+# Maintainer: taotieren <admin@taotieren.com>
 # Maintainer: Anatol Pomozov
 # Co-Maintainer: Abdelhak Bougouffa <abougouffa@fedoraproject.org>
 # Contributor: Thomas Krug <t.krug@elektronenpumpe.de>
@@ -6,9 +7,9 @@ pkgname=dsview-git
 pkgver=1.3.2.r24.g831fbe54
 pkgrel=1
 pkgdesc='GUI programe for supporting various instruments from DreamSourceLab, including logic analyzer, oscilloscope, etc.'
-arch=(i686 x86_64)
+arch=($CARCH)
 url='http://www.dreamsourcelab.com/'
-license=(GPL-3.0-only)
+license=('GPL-3.0-only')
 # Upstream added VCS dependency to libsigrokdecode :/
 _qt=qt5
 depends=(
@@ -23,7 +24,7 @@ makedepends=(boost
   git
   ${_qt}-tools
   ninja)
-source=("${pkgname}::git+https://github.com/DreamSourceLab/DSView") #branch=develop
+source=("${pkgname}::git+https://github.com/DreamSourceLab/DSView.git")
 sha1sums=('SKIP')
 
 pkgver() {
