--- a/aur-repo/dsview-git/PKGBUILD
+++ b/aur-repo/dsview-git/PKGBUILD
@@ -4,14 +4,14 @@
 # Contributor: Thomas Krug <t.krug@elektronenpumpe.de>
 
 pkgname=dsview-git
-pkgver=1.3.2.r24.g831fbe54
+pkgver=1.3.2.r53.g2e9e2c8
 pkgrel=1
 pkgdesc='GUI programe for supporting various instruments from DreamSourceLab, including logic analyzer, oscilloscope, etc.'
 arch=($CARCH)
 url='http://www.dreamsourcelab.com/'
 license=('GPL-3.0-only')
 # Upstream added VCS dependency to libsigrokdecode :/
-_qt=qt5
+_qt=qt6
 depends=(
   boost-libs
   hicolor-icon-theme
