--- a/aur-repo/dsview-git/PKGBUILD
+++ b/aur-repo/dsview-git/PKGBUILD
@@ -47,6 +47,8 @@ pkgver() {
 prepare() {
   git -C "${srcdir}/${pkgname}" clean -dfx
   cd "${srcdir}"/${pkgname}/
+  git config user.email "admin@taotieren.com"
+  git config user.name "taotieren"
   git remote add taotieren https://github.com/taotieren/DSView.git
   git fetch --all
   git merge taotieren/fix-build
