--- a/aur-repo/bookget-git/PKGBUILD
+++ b/aur-repo/bookget-git/PKGBUILD
@@ -12,8 +12,10 @@ conflicts=(${pkgname%-git})
 #replaces=(${pkgname})
 depends=(glibc)
 optdepends=('dezoomify-rs: Zoomable image downloader for Google Arts & Culture, Zoomify, IIIF, and others')
-makedepends=(git
-    go)
+makedepends=(
+    git
+    go
+)
 backup=()
 options=('!strip' '!debug')
 #install=${pkgname}.install
@@ -39,6 +41,8 @@ build() {
     export CGO_CXXFLAGS="${CXXFLAGS}"
     export CGO_LDFLAGS="${LDFLAGS}"
     export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly -modcacherw"
+    export GO111MODULE=on
+    export GOPROXY=https://goproxy.cn,direct
 
     mkdir -pv build/
     go build -o build
