--- a/aur-repo/python-openstep-plist-git/PKGBUILD
+++ b/aur-repo/python-openstep-plist-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-openstep-plist-git
-pkgver=0.4.0.r0.g61dc6ac
-pkgrel=7
+pkgver=0.4.0.r10.g43b1dbb
+pkgrel=1
 pkgdesc='OpenStep plist parser and writer written in Cython'
 url='https://github.com/fonttools/openstep-plist'
 license=('MIT')
