--- a/aur-repo/un-lock-git/PKGBUILD
+++ b/aur-repo/un-lock-git/PKGBUILD
@@ -3,8 +3,8 @@
 pkgbase=un-lock-git
 pkgname=miunlocktool-git
 _name=MiUnlockTool
-pkgver=1.5.8.r3.ge4fa114
-pkgrel=5
+pkgver=1.5.8.r5.g74eebe0
+pkgrel=1
 pkgdesc="MiUnlockTool developed to retrieve encryptData(token) for Xiaomi devices for unlocking bootloader, It is compatible with all platforms."
 arch=(any)
 url="https://github.com/offici5l/MiUnlockTool"
