--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.77.r13.gbbfbdad
+pkgver=28101.78.r1.gb853f6f
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
